# godot-ai-playtest

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: ci.yml  publish.yml
addons/godot_ai_playtest/: playtest_server.gd  plugin.cfg  plugin.gd
addons/godot_playtest/: playtest_server.gd  plugin.cfg
cli/: README.md  pyproject.toml
cli/src/godot_ai_playtest/: __init__.py  cli.py  client.py  scenario.py
cli/src/godot_playtest/: __init__.py  cli.py  client.py  scenario.py
docs/: universal-hooks.md
scenarios/: movement_test.yaml  smoke_test.yaml
