[project]
name = "godot-ai-playtest"
version = "0.4.0"
description = "External TCP control for Godot 4.x games — built for AI agents, automation, and CI pipelines"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Marcus Hale", email = "marcus@auderon.com"}
]
keywords = [
    "godot", 
    "gamedev", 
    "testing", 
    "ai", 
    "automation",
    "playtesting",
    "integration-testing",
    "ci-cd",
    "game-testing",
    "visual-regression"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
    "Framework :: AsyncIO",
]

dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.urls]
Homepage = "https://github.com/marcushale/godot-ai-playtest"
Documentation = "https://github.com/marcushale/godot-ai-playtest#readme"
Repository = "https://github.com/marcushale/godot-ai-playtest"
Issues = "https://github.com/marcushale/godot-ai-playtest/issues"
Changelog = "https://github.com/marcushale/godot-ai-playtest/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.0",
]

[project.scripts]
playtest = "godot_ai_playtest.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/godot_ai_playtest"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
